--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ python-multipart>=0.0.6
 
 # Analysis & Visualization
 networkx>=3.1
+python-louvain>=0.16
 scikit-learn>=1.3.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
