--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,26 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "clsx": "^2.0.0",
+    "d3": "^7.8.5",
+    "framer-motion": "^10.16.0",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "framer-motion": "^10.16.0",
     "react-force-graph-3d": "^1.24.0",
-    "three": "^0.158.0",
-    "@react-three/fiber": "^8.15.0",
-    "@react-three/drei": "^9.88.0",
-    "d3": "^7.8.5",
-    "zustand": "^4.4.0",
-    "axios": "^1.6.0",
-    "lucide-react": "^0.292.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "react-router-dom": "^6.20.0",
+    "tailwind-merge": "^2.0.0",
+    "three": "^0.182.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@types/three": "^0.158.0",
-    "@types/d3": "^7.4.0",
+    "@types/three": "^0.182.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
