--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,11 @@
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-force-graph-3d": "^1.24.0",
+    "react-force-graph-3d": "^1.29.1",
     "react-router-dom": "^6.20.0",
     "tailwind-merge": "^2.0.0",
-    "three": "^0.182.0",
+    "three": "^0.183.1",
+    "three-render-objects": "^1.40.4",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
