--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/katex": "^0.16.8",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
     "d3": "^7.8.5",
     "framer-motion": "^10.16.0",
+    "katex": "^0.16.33",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
